feat(conversations): add get conversation by ID endpoint and improve error handling